<resources>
    <string name="app_name">Talkie</string>
    <string name="email">Email</string>
    <string name="Enter_your_email">Enter your Email</string>
    <string name="password">Password</string>
    <string name="Enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="Or_login_with">Or Login With</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="Enter_your_name">Enter your name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Sign_Up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_account">Create account ?</string>
    <string name="enter_email">Enter your Email</string>
    <string name="reset_password">Send reset link</string>
    <string name="Back_to_login">Back to Login?</string>
    <string name="New_to_platform_Register">New to platform? Register</string>
    <string name="facebook_app_id">1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="new_group">New group</string>
    <string name="invite">Invite</string>
    <string name="starred_messages">Starred messages</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="sample_name">Shubham Singh</string>
    <string name="sample_message">Hi, how are you?</string>
    <string name="sample_time">10:30 AM</string>
    <string name="type_a_message">Type a message</string>
</resources>