<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/progressBar"
                android:visibility="gone" />


            <ImageView
                android:id="@+id/top_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/topbg2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/app_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_image_view">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingEnd="@dimen/_18sdp"
                    android:paddingStart="@dimen/_18sdp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/profile_image"
                            android:layout_width="96dp"
                            android:layout_height="96dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:src="@drawable/avatar"
                            app:civ_border_width="@dimen/_1sdp"
                            app:civ_border_color="@color/colorSecondary"
                            android:layout_gravity="center"
                            />

                        <ImageView
                            android:id="@+id/add_image_icon"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            app:layout_constraintStart_toStartOf="@id/profile_image"
                            android:layout_marginStart="@dimen/_55sdp"
                            android:src="@drawable/baseline_add_a_photo_24"
                            app:layout_constraintTop_toTopOf="@id/profile_image"
                            android:contentDescription="@string/app_name"
                            app:tint="@color/colorSecondary" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold"
                        android:text="@string/name" />

                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/background_edit_text2"
                        android:hint="@string/Enter_your_name"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:padding="@dimen/_10sdp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:textColor="#000000"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold"
                        android:text="@string/email" />

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/background_edit_text2"
                        android:hint="@string/Enter_your_email"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:padding="@dimen/_10sdp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:textColor="#000000"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold"
                        android:text="@string/password" />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/background_edit_text2"
                        android:hint="@string/Enter_your_password"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:padding="@dimen/_10sdp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:text="@string/confirm_password"
                        android:textColor="#000000"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/background_edit_text2"
                        android:hint="@string/Enter_your_password"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:padding="@dimen/_10sdp" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/signup_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:backgroundTint="@color/colorSecondary"
                        android:text="@string/Sign_Up"
                        android:textColor="@color/white"
                        android:padding="@dimen/_8sdp"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/already_have_an_account_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="end"
                        android:text="@string/already_have_an_account"
                        android:textColor="#000000"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold" />
                </LinearLayout>
                <ImageView
                    android:id="@+id/bottom_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_150sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bottombg2"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="end" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>