<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/progressBar"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/top_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/topbg1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_image_view">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/_18sdp"
                    android:paddingEnd="@dimen/_18sdp"
                    >

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="#000000"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/background_edit_text"
                        android:ems="10"
                        android:hint="@string/Enter_your_email"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_10sdp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:text="@string/password"
                        android:textColor="#000000"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/background_edit_text"
                        android:ems="10"
                        android:hint="@string/Enter_your_password"
                        android:inputType="textPassword"
                        android:padding="@dimen/_10sdp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/forgot_password_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="end"
                        android:text="@string/forgot_password"
                        android:textColor="#000000"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/login_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:background="@drawable/background_button"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_1sdp"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:layout_weight="1"
                            android:background="#000000" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_13sdp"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:text="@string/Or_login_with"
                            android:textColor="#000000"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_1sdp"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:layout_weight="1"
                            android:background="#000000" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/facebook_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/background_facebook"
                            android:drawableLeft="@drawable/facebook_icon"
                            android:gravity="center"
                            android:padding="@dimen/_8sdp"
                            android:text="Facebook"
                            android:textColor="#F7F5F5" />

                        <TextView
                            android:id="@+id/google_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:background="@drawable/background_google"
                            android:drawableLeft="@drawable/google_icon"
                            android:gravity="center"
                            android:padding="@dimen/_8sdp"
                            android:text="Google"
                            android:textColor="#F7F5F5" />
                    </LinearLayout>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/create_account_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="end"
                        android:text="@string/create_account"
                        android:textColor="#000000"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/bottom_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_150sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bottombg1"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="end"
                    />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>